unpackaged/main/default/objects/tspa__File_Transfer_Folder__c/tspa__File_Transfer_Folder__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>VRA File Transfer Folder</label>
</CustomObject>