unpackaged/main/default/objects/tspa__File_Transfer_Folder__c/fields/tspa__Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Folder_Id__c</fullName>
    <label>Folder Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>