unpackaged/main/default/objects/tspa__File_Transfer_Folder__c/fields/tspa__isAssetLibrary__c.field-meta.xml
<CustomField>
    <fullName>tspa__isAssetLibrary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAssetLibrary</label>
    <type>Checkbox</type>
</CustomField>