unpackaged/main/default/objects/tspa__File_Transfer_Folder__c/fields/tspa__Root_Library_Id__c.field-meta.xml
<CustomField>
    <fullName>tspa__Root_Library_Id__c</fullName>
    <label>Root Library Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>