unpackaged/main/default/objects/tspa__File_Transfer_Folder__c/fields/tspa__Type__c.field-meta.xml
<CustomField>
    <fullName>tspa__Type__c</fullName>
    <label>Type</label>
    <length>7</length>
    <type>Text</type>
</CustomField>