unpackaged/main/default/objects/tspa__File_Transfer_Folder__c/listViews/tspa__All_fields.listView-meta.xml
<ListView>
    <fullName>tspa__All_fields</fullName>
    <columns>NAME</columns>
    <columns>tspa__Folder_Name__c</columns>
    <columns>tspa__Folder_Id__c</columns>
    <columns>tspa__Root_Library_Id__c</columns>
    <columns>tspa__isAssetLibrary__c</columns>
    <columns>tspa__ParentFolderId__c</columns>
    <columns>tspa__Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>